[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/Sprite1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Minigames/SirTartarus/Tank.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Minigames/GunFight/Bullet.tscn" type="PackedScene" id=3]

[node name="Tank" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 32
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Sprite" type="Sprite" parent="Sprite"]
position = Vector2( 0, 90 )
scale = Vector2( 4.5, 2.5 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( 0, 90 )
scale = Vector2( 5, 2 )
texture = ExtResource( 1 )

[node name="Sprite7" type="Sprite" parent="Sprite"]
position = Vector2( 0, 130 )
scale = Vector2( 5, 0.75 )
texture = ExtResource( 1 )

[node name="Sprite8" type="Sprite" parent="Sprite"]
position = Vector2( 0, 130 )
scale = Vector2( 5.5, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="Sprite"]
position = Vector2( -77, 88 )
scale = Vector2( 2.5, 0.75 )
texture = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="Sprite"]
position = Vector2( -66, 88 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Sprite"]
position = Vector2( 0, 60 )
scale = Vector2( 3, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="Sprite"]
position = Vector2( 0, 55 )
scale = Vector2( 2, 0.5 )
texture = ExtResource( 1 )

[node name="Casco" type="Sprite" parent="Sprite"]

[node name="Sprite" type="Sprite" parent="Sprite/Casco"]
position = Vector2( 0, -15 )
scale = Vector2( 2.5, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprite/Casco"]
position = Vector2( 0, -24 )
scale = Vector2( 2, 0.75 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Sprite/Casco"]
position = Vector2( 0, -32 )
scale = Vector2( 1.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.5, 0.5 )
scale = Vector2( 1.1, 1.1 )
polygon = PoolVector2Array( -23.4031, 24.032, -23.4453, 28.6926, -28.1077, 28.781, -28.0502, 46.3844, -50.2095, 46.4493, -50.4744, 55.5871, -28.217, 55.768, -28.0309, 94.5405, -23.462, 94.5405, -23.5084, 99.024, -19.587, 99.2183, -19.5867, 117.868, -4.47229, 117.78, -4.4726, 99.0415, 4.60669, 99.024, 4.45477, 117.691, 19.304, 117.691, 19.5402, 98.9406, 23.4871, 98.9782, 23.4477, 94.2929, 28.0937, 94.4503, 28.0204, 55.6487, 52.4959, 55.8459, 52.6727, 46.4767, 28.1666, 46.374, 28.1166, 28.8032, 23.4951, 28.7754, 23.4395, 24.0425, 9.45709, 24.119, 9.42395, 18.8217, 18.6447, 18.6902, 18.7331, -18.6097, -18.6552, -18.6981, -18.8065, 18.797, -9.3407, 18.8527, -9.34833, 23.9865 )

[node name="Tank" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -56.2106, 58.7583, -56.2238, 65.0326, -62.5124, 65.0124, -62.4745, 114.982, -56.2658, 115, -56.2515, 120.618, -62.4952, 120.618, -62.4513, 123.715, -68.7578, 123.758, -68.7295, 136.233, -62.4565, 136.182, -62.5226, 139.373, 62.5638, 139.352, 62.5638, 136.347, 68.7952, 136.303, 68.6957, 123.753, 62.4624, 123.815, 62.5258, 120.575, 56.2318, 120.602, 56.2813, 115, 62.5019, 115.005, 62.5049, 65.0544, 56.1928, 64.9659, 56.2628, 58.756, 37.483, 58.7432, 37.5047, 53.8154, 25.0502, 53.727, 24.9551, 48.765, -24.9219, 48.8022, -25.0054, 53.6743, -37.5275, 53.7801, -37.5421, 58.7409 )

[node name="Casco" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -18.7512, -33.3438, -18.7338, -21.2124, -24.9788, -21.19, -25.0045, -8.71365, 25.0268, -8.74703, 24.9959, -21.2758, 18.7596, -21.1923, 18.7548, -33.3332, 12.5302, -33.342, 12.5302, -38.2282, -12.5104, -38.2078, -12.4856, -33.3464 )

[node name="LifeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Tank" type="CollisionPolygon2D" parent="LifeArea"]
polygon = PoolVector2Array( -56.2106, 58.7583, -56.2238, 65.0326, -62.5124, 65.0124, -62.4745, 114.982, -56.2658, 115, -56.2515, 120.618, -62.4952, 120.618, -62.4513, 123.715, -68.7578, 123.758, -68.7295, 136.233, -62.4565, 136.182, -62.5226, 139.373, 62.5638, 139.352, 62.5638, 136.347, 68.7952, 136.303, 68.6957, 123.753, 62.4624, 123.815, 62.5258, 120.575, 56.2318, 120.602, 56.2813, 115, 62.5019, 115.005, 62.5049, 65.0544, 56.1928, 64.9659, 56.2628, 58.756, 37.483, 58.7432, 37.5047, 53.8154, 25.0502, 53.727, 24.9551, 48.765, -24.9219, 48.8022, -25.0054, 53.6743, -37.5275, 53.7801, -37.5421, 58.7409 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LifeArea"]
polygon = PoolVector2Array( -18.7512, -33.3438, -18.7338, -21.2124, -24.9788, -21.19, -25.0045, -8.71365, 25.0268, -8.74703, 24.9959, -21.2758, 18.7596, -21.1923, 18.7548, -33.3332, 12.5302, -33.342, 12.5302, -38.2282, -12.5104, -38.2078, -12.4856, -33.3464 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="LifeArea"]
position = Vector2( 0.5, 0.5 )
scale = Vector2( 1.1, 1.1 )
polygon = PoolVector2Array( -23.4031, 24.032, -23.4453, 28.6926, -28.1077, 28.781, -28.0502, 46.3844, -50.2095, 46.4493, -50.4744, 55.5871, -28.217, 55.768, -28.0309, 94.5405, -23.462, 94.5405, -23.5084, 99.024, -19.587, 99.2183, -19.5867, 117.868, -4.47229, 117.78, -4.4726, 99.0415, 4.60669, 99.024, 4.45477, 117.691, 19.304, 117.691, 19.5402, 98.9406, 23.4871, 98.9782, 23.4477, 94.2929, 28.0937, 94.4503, 28.0204, 55.6487, 52.4959, 55.8459, 52.6727, 46.4767, 28.1666, 46.374, 28.1166, 28.8032, 23.4951, 28.7754, 23.4395, 24.0425, 9.45709, 24.119, 9.42395, 18.8217, 18.6447, 18.6902, 18.7331, -18.6097, -18.6552, -18.6981, -18.8065, 18.797, -9.3407, 18.8527, -9.34833, 23.9865 )

[node name="InmunityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="LifeArea" to="." method="_on_LifeArea_body_entered"]
[connection signal="timeout" from="InmunityTimer" to="." method="_on_InmunityTimer_timeout"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
